# DABSE-project

./: .gitignore  CMakeLists.txt  README.md  a.out  compileAndRun.sh  dec.c  dec.h  enc.h  main.c  setup  setup.c  setup.h  test.h  test2.h  trapgen.c  trapgen.h
attribute/: Attribute.h  AttributeCategory.txt  AttributeName.txt  AttributeSet.h
attribute/AttributeValues/: Department  Doctor_number  Hospital  Sex
ciphertext/: SymmetricCipher.h
policy/: createPolicy.c  createPolicy.h  example_getOmega.in  getOmega.c  getOmega.h  makefile
policy/data_structure/access_tree/: AT_queue.c  AT_queue.h  AT_stack.c  AT_stack.h  access_tree.c  access_tree.h
policy/data_structure/char/: char_stack.c  char_stack.h
policy/data_structure/int/: int_vector.c  int_vector.h
